Hier sammeln wir Aenderungsnotizen fuer die aktuelle Firmware (seit dem letzten Release).
Im Fall eines Release dienen die Notizen zum Befüllen des Changelogs im Wiki:
 https://wiki.opennet-initiative.de/wiki/Opennet_Firmware_Versionen
Anschließend kann diese Liste wieder geleert werden.


= Änderungen aus Nutzersicht =
* Gateway-Liste: jeder Gateway ist verlinkt mit einer Karte auf der die Route vom eigenen AP zum Gateway visualisiert ist
* root-Passwort ist bei einer Erstinstallation leer
** zuvor wurde "admin" vorgegeben, da openwrt bis einschließlich Barrier Breaker den ssh-Dienst nur startete wenn ein Passwort gesetzt ist
* bei Verlust einer Gateway-Verbindung werden alle Gateway-Dienste dieses Hosts als unklar definiert
** bisher dauerte die Verbindungsunterbrechung durch die Wartezeit auf die anderen Dienste desselben Hosts bis zu zehn Minuten
* Monitoring:
** die Ping-Latenz zum UGW und zum VPN-Tunnel-Gateway ist via munin auswertbar
* Fehlerkorrekturen:
** POE-Passthrough-Umschalter funktioniert nun
** UGW: Korrektur der Ermittlung und Announcierung der Uplink-Bandbreite
** zeitnahe Erkennung einer ungeklärten Race-Condition bei parallelem OpenVPN-Start
** verzögerte UGW-Portweiterleitung korrigiert

= Interne Änderungen =

= Bemerkenswertes / Fehler / Mängel =

= Aktualisierungshinweis =